feat(): application tests
